<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_fullIcon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop">

        </ImageView>

        <TextView
            android:id="@+id/textView_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#888888" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>