<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_zoo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAA">

    </androidx.recyclerview.widget.RecyclerView>
</layout>