<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAA">

    </androidx.recyclerview.widget.RecyclerView>

</layout>